# atlas-agents

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
atlas/: __init__.py  cli.py  config.py  main.py
atlas/agents/: __init__.py  critic.py  emitter.py  executor.py  planner.py  prompts.py  schemas.py  synthesizer.py
atlas/api/: __init__.py  deps.py  routes.py  schemas.py
atlas/eval/: __init__.py  report.py  runner.py  scorer.py  suite.py
atlas/eval/suites/: core.yaml  injection.yaml
atlas/graph/: __init__.py  build.py  context.py  emitter.py  nodes.py  orchestrator.py  state.py
atlas/guardrails/: __init__.py  budget.py  injection.py
atlas/llm/: __init__.py  base.py  factory.py  providers.py  tokens.py
atlas/mcp/: __init__.py  client.py  server.py
atlas/observability/: __init__.py  events.py  logging.py  metrics.py
atlas/persistence/: db.py  records.py  repository.py  sql.py
atlas/sandbox/: __init__.py  docker_sandbox.py
atlas/schemas/: __init__.py  plan.py  report.py  run.py
atlas/service/: __init__.py  run_manager.py
atlas/tools/: __init__.py  base.py  registry.py
atlas/tools/builtin/: __init__.py  code_exec.py  file_io.py  http_fetch.py  web_search.py
deploy/: README.md
deploy/aws/: ecr.tf  main.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.sandbox  docker-compose.yml  nginx.conf
deploy/k8s/: api.yaml  config.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml
docs/: architecture.excalidraw  architecture.md
docs/benchmarks/: results.json
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ActivityTimeline.tsx  AppBar.tsx  ApprovalGate.tsx  ConfidenceGauge.tsx  MetricCard.tsx  PlanTree.tsx  ReportPanel.tsx  RunVisualizer.tsx  RunsTable.tsx  SectionLabel.tsx  StatusPill.tsx
frontend/src/data/: benchmarks.ts  sampleRun.ts
frontend/src/hooks/: useRunStream.ts
frontend/src/lib/: format.ts  status.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: plot_benchmarks.py
tests/: conftest.py  test_api.py  test_config.py  test_eval.py  test_events.py  test_file_io.py  test_graph.py  test_guardrails.py  test_repository.py  test_sandbox_integration.py  test_schemas.py  test_sql_integration.py  test_tools_registry.py  test_web_search.py
(+7 files in other folders)
