[project]
name = "atlas-agents"
version = "0.4.0"
description = "Self-hosted, MCP-native multi-agent platform with a planner-executor-critic architecture, durable execution, and a built-in eval harness."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ayman Youss" }]
keywords = ["agents", "mcp", "langgraph", "llm", "multi-agent", "planner", "critic"]

dependencies = [
    # Web / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",
    "websockets>=13.1",
    # Orchestration
    "langgraph>=0.2.45",
    "langgraph-checkpoint>=2.0.2",
    "langgraph-checkpoint-postgres>=2.0.1",
    "langchain-core>=0.3.15",
    "langchain-anthropic>=0.2.4",
    "langchain-openai>=0.2.5",
    # Model Context Protocol
    "mcp>=1.1.0",
    # Persistence
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.3",
    "alembic>=1.14.0",
    # Tooling / infra
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "orjson>=3.10.11",
    "docker>=7.1.0",
    "prometheus-client>=0.21.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.33.0",
    "ruff>=0.7.3",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
    "freezegun>=1.5.1",
]

[project.scripts]
atlas = "atlas.cli:app"

[project.urls]
Homepage = "https://github.com/AymanYouss/atlas-agents"
Repository = "https://github.com/AymanYouss/atlas-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["atlas", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["atlas"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that require external services (Postgres, Docker)",
    "eval: benchmark / eval-harness tests",
]

[tool.coverage.run]
source = ["atlas"]
omit = ["atlas/cli.py", "atlas/**/__main__.py"]
